# ChangeLog for perl-core/Module-Pluggable
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: /usr/local/ssd/gentoo-x86/output/perl-core/cvs-repo/gentoo-x86/perl-core/Module-Pluggable/ChangeLog,v 1.12 2011/05/20 14:03:56 tove Exp $

*Module-Pluggable-3.900.0 (20 May 2011)

  20 May 2011; Torsten Veller <tove@gentoo.org> -Module-Pluggable-3.9.ebuild,
  +Module-Pluggable-3.900.0.ebuild:
  Change version scheme

  23 Dec 2009; Fabian Groffen <grobian@gentoo.org>
  Module-Pluggable-3.9.ebuild:
  Marked ~x86-solaris, bug #296509

  16 Dec 2009; Jonathan Callen <abcd@gentoo.org>
  Module-Pluggable-3.9.ebuild:
  QA: Transfer prefix keywords

  28 Apr 2009; Torsten Veller <tove@gentoo.org>
  -Module-Pluggable-3.6.ebuild, -Module-Pluggable-3.8.ebuild:
  Cleanup

  25 Apr 2009; Raúl Porcel <armin76@gentoo.org>
  Module-Pluggable-3.9.ebuild:
  ia64 stable wrt #266103

  19 Apr 2009; Tiago Cunha <tcunha@gentoo.org> Module-Pluggable-3.9.ebuild:
  stable sparc, bug 266103

  19 Apr 2009; Markus Meier <maekke@gentoo.org> Module-Pluggable-3.9:
  amd64/x86 stable, bug #266103

  18 Apr 2009; Tobias Klausmann <klausman@gentoo.org>
  Module-Pluggable-3.9.ebuild:
  Stable on alpha, bug #266103

  18 Apr 2009; nixnut <nixnut@gentoo.org> Module-Pluggable-3.9.ebuild:
  ppc stable #266103

  15 Apr 2009; Brent Baude <ranger@gentoo.org> Module-Pluggable-3.9.ebuild:
  Marking Module-Pluggable-3.9 ppc64 for bug 266103

*Module-Pluggable-3.9 (18 Mar 2009)

  18 Mar 2009; Torsten Veller <tove@gentoo.org>
  +Module-Pluggable-3.9.ebuild:
  Version bump

  01 Nov 2008; Torsten Veller <tove@gentoo.org> +metadata.xml,
  +Module-Pluggable-3.6.ebuild, +Module-Pluggable-3.8.ebuild:
  dev-perl => perl-core migration

  01 Nov 2008; Torsten Veller <tove@gentoo.org> Module-Pluggable-3.6.ebuild,
  Module-Pluggable-3.8.ebuild:
  New virtuals: module-build

*Module-Pluggable-3.8 (20 Sep 2008)

  20 Sep 2008; Torsten Veller <tove@gentoo.org>
  +Module-Pluggable-3.8.ebuild: