@@ -2,13 +2,15 @@
 Hash: SHA256
 
 DIST Module-Pluggable-3.9.tar.gz 17611 RMD160 b45fd8b8fe4ba6d03fefed00be3518f0a49c52d9 SHA1 354332393ff8e1faa9d0244785a78aa0c7df71df SHA256 8c93e78e27ef43fc2cfe3d72256c14c8169036fb6935913cfd48a0df02f4595f
+DIST Module-Pluggable-4.0.tar.gz 17444 RMD160 8f55edb6c248567a58db658c56e4284ec3300060 SHA1 dafe4021317b6b78a801a3b8b9fdf5ca05c942b9 SHA256 975ba3682caa846df9cac55fd059618cc926991471d82a698b55926b33dd65eb
 EBUILD Module-Pluggable-3.900.0.ebuild 590 RMD160 1c70acadde3f73939ff5f72cbe26f520a7ad221a SHA1 cda1110075c9115b58d29438312b66619784b817 SHA256 fcca6cde2eb8cac39b4b3b4821a9a2a483aee252ea77d4e02b6fb24f0607af00
-MISC ChangeLog 6266 RMD160 e56029927fdeadfa2ef1f604f58155d426324ab5 SHA1 ca21afbea6115cd97576259aa9d3031d30f9e3ae SHA256 33485a2e60928d1e2676cb63c6fa5d3ee18499ef7a2375c01e82c88567ecff8a
+EBUILD Module-Pluggable-4.0.0.ebuild 595 RMD160 573d84987b9f6e880b2e0286931bed2c3a79989d SHA1 2f4c3f808a86a32a6630731c34c219bd9b205863 SHA256 9b7579515582f08932ec9992babd6cb4c9eb8a686cb6e224d552323969a8ca52
+MISC ChangeLog 6401 RMD160 45b2d38819611128590445e63e0fc8b714b968c0 SHA1 084652b81b2ca66d4e76e37c7ef0a9eb5205312c SHA256 93985819b712d05077d602c82eb89069c74a1151c0b08e8a6ca1b85d1a69bca1
 MISC metadata.xml 242 RMD160 af95a84481b23f05e0956b16a956987851d5b83f SHA1 47ba36b0734680c147daa3857389b3d0951b9aca SHA256 a5dce3c753784653344db4a6aa4874056c9c1151ec8733a4156ed6b10ac4e4d6
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0.17 (GNU/Linux)
+Version: GnuPG v2.0.19 (GNU/Linux)
 
-iEYEAREIAAYFAk3WdNcACgkQV3J2n04EauxXtgCeLkPjBNvN2kFEUUtbqs3s9t2e
-eAAAnRSXCmpEvyuLIUvhNPyvlYPgWwVE
-=CKPS
+iEYEAREIAAYFAk+hS0AACgkQV3J2n04EauxY0wCgiff4FvvnxOkZDJZ5jPC/mt99
+IIoAoKiQh0kdVTPggiQlmKiD/tW56eML
+=5Srb
 -----END PGP SIGNATURE-----
