@@ -1,0 +1,20 @@
+# Copyright 1999-2012 Gentoo Foundation
+# Distributed under the terms of the GNU General Public License v2
+# $Header: /usr/local/ssd/gentoo-x86/output/perl-core/cvs-repo/gentoo-x86/perl-core/Module-Pluggable/Module-Pluggable-4.0.0.ebuild,v 1.1 2012/05/02 14:56:59 tove Exp $
+
+EAPI=4
+
+MODULE_AUTHOR=SIMONW
+MODULE_VERSION=4.0
+inherit perl-module
+
+DESCRIPTION="automatically give your module the ability to have plugins"
+
+SLOT="0"
+KEYWORDS="~alpha ~amd64 ~ia64 ~ppc ~ppc64 ~sparc ~x86 ~amd64-linux ~x86-linux ~ppc-macos ~x86-macos ~sparc-solaris ~x86-solaris"
+IUSE=""
+
+RDEPEND="virtual/perl-File-Spec"
+DEPEND="${RDEPEND}"
+
+SRC_TEST="do"
