@@ -1,6 +1,11 @@
 # ChangeLog for perl-core/Module-Pluggable
-# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/perl-core/cvs-repo/gentoo-x86/perl-core/Module-Pluggable/ChangeLog,v 1.12 2011/05/20 14:03:56 tove Exp $
+# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /usr/local/ssd/gentoo-x86/output/perl-core/cvs-repo/gentoo-x86/perl-core/Module-Pluggable/ChangeLog,v 1.13 2012/05/02 14:56:59 tove Exp $
+
+*Module-Pluggable-4.0.0 (02 May 2012)
+
+  02 May 2012; Torsten Veller <tove@gentoo.org> +Module-Pluggable-4.0.0.ebuild:
+  Version bump
 
 *Module-Pluggable-3.900.0 (20 May 2011)
 
